2008-04-06  Murray Cumming  <murrayc@murrayc.com>

	* providers/postgres/gda-postgres-recordset.c
	  (gda_postgres_recordset_get_row,
	  gda_postgres_recordset_get_value_at): unref the result of get_row() 
	(not the get_row vfunc), because gda_data_model_hash_insert_row() 
	holds its own reference. This fixes the leak of each GdaRow.

2008-04-05  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-connection.c (gda_connection_dispose): Unref the client, 
	to fix a leak. Bug #526034.

2008-04-05  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-column.c (gda_column_set_default_value):
	Free default_value with gda_value_free() instead of g_free(), to fix 
	what valgrind says is a possible leak.

2008-04-04  Murray Cumming  <murrayc@murrayc.com>

	* providers/postgres/utils.c (gda_postgres_type_oid_to_gda):
	Prevent an access outside of an array, as found by valgrind.

2008-04-03  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-config.c (gda_config_get_provider_list, get_config_client):
	Use g_getenv() instead of getenv() for portability.
	* providers/postgres/gda-postgres-provider.c (get_connection_type_list,
	  gda_postgres_provider_close_connection): Free any_type_oid instead of 
	leaking it.
	* providers/postgres/gda-postgres-recordset.c
	  (gda_postgres_recordset_finalize): Free table_name instead of leaking 
	it.
	* providers/postgres/libmain.c (plugin_init): Add a comment that the 
	module path is leaked, but that it is not a big deal.

2008-03-18  Murray Cumming  <murrayc@murrayc.com>

	* libgda/gda-client.c: (find_or_load_provider): Reverted the change 
	here too, because it freed data that it did not own, causing a crash.

2008-03-18  Murray Cumming:  <murrayc@murrayc.com>

	* libgda/gda-config.c: (gda_config_get_provider_by_name): 
	Revert the previous change because it leaked the info and freed the 
	list though it did not have ownership, causing a crash.

2008-03-17  Phil Longstaff  <plongstaff@rogers.com>
